--- a/prophet_cmd/config.json
+++ b/prophet_cmd/config.json
@@ -4,14 +4,13 @@
   "slug": "prophet_api_cmd",
   "description": "An API add-on for forecasting with Prophet - Development Version",
   "arch": ["armhf", "armv7", "aarch64", "amd64"],
-  "startup": "services",
-  "boot": "auto",
+  "startup": "application",
+  "boot": "manual",
   "options": {},
   "schema": {},
-  "image": "local/prophet-api-dev:latest",
   "ports": {
     "5000/tcp": 5000
   },
-  "host_network": false
+  "host_network": true
 }
 
