--- a/prophet_influx/Dockerfile
+++ b/prophet_influx/Dockerfile
@@ -1,7 +1,2 @@
-FROM mgenrique/prophet-api
+FROM mgenrique/prophet_influx_app
 
-# Crear el directorio /app si no existe
-RUN mkdir -p /app
-
-# Copiar dev_app.py al directorio /app
-COPY dev_app.py /app/dev_app.py
