--- a/prophet-influx (new)/config.json
+++ b/prophet-influx (new)/config.json
@@ -26,5 +26,13 @@
     "ports": {
         "5000/tcp": 5000
     },
-    "host_network": false
+    "host_network": false,
+    "environment": {
+      "INFLUXDB_HOST": "options.influxdb_host",
+      "INFLUXDB_PORT": "options.influxdb_port",
+      "INFLUXDB_USER": "options.influxdb_user",
+      "INFLUXDB_PASSWORD": "options.influxdb_password",
+      "INFLUXDB_DBNAME": "options.influxdb_dbname",
+      "PORT": "options.port"
+  }    
 }
