--- a/prophet-influx 1.0 arm64/config.json
+++ b/prophet-influx 1.0 arm64/config.json
@@ -1,7 +1,7 @@
 {
     "name": "Prophet Influx API (ARM64)",
     "version": "1.0",
-    "slug": "prophet-influx",
+    "slug": "prophetinflux",
     "description": "An API add-on for forecasting with Prophet and Influx (ARM64 version)",
     "arch": ["armhf", "armv7", "aarch64", "amd64"],
     "startup": "services",
@@ -22,7 +22,7 @@
         "influxdb_dbname": "str",
         "port": "int"
     },
-    "image": "mgenrique/prophet-influx:1.0",
+    "image": "mgenrique/prophetinflux:1.0",
     "ports": {
         "5000/tcp": 5000
     },
