--- a/prophet-influx 1.0 arm64/config.json
+++ b/prophet-influx 1.0 arm64/config.json
@@ -1,6 +1,6 @@
 {
     "name": "Prophet Influx API (ARM64)",
-    "version": "1.0",
+    "version": "1.0_arm64",
     "slug": "prophet-influx-arm",
     "description": "An API add-on for forecasting with Prophet and Influx (ARM64 version)",
     "arch": ["armhf", "armv7", "aarch64", "amd64"],
@@ -22,7 +22,7 @@
         "influxdb_dbname": "str",
         "port": "int"
     },
-    "image": "mgenrique/prophet-influx-arm",
+    "image": "mgenrique/prophet-influx",
     "ports": {
         "5000/tcp": 5000
     },
