--- a/prophet-influx 1.0 arm64/config.json
+++ b/prophet-influx 1.0 arm64/config.json
@@ -1,10 +1,10 @@
 {
     "name": "Prophet Influx API (ARM64)",
     "version": "1.1_arm64",
-    "slug": "prophet-influx-arm",
+    "slug": "prophet-influx",
     "description": "An API add-on for forecasting with Prophet and Influx (ARM64 version)",
     "arch": ["armhf", "armv7", "aarch64", "amd64"],
-    "startup": "application",
+    "startup": "service",
     "boot": "auto",
     "options": {
         "influxdb_host": "localhost",
