--- a/prophet-influx-multi-addon/Dockerfile
+++ b/prophet-influx-multi-addon/Dockerfile
@@ -9,6 +9,8 @@ COPY run.sh /app/run.sh
 # Da permisos de ejecución al script de arranque
 RUN chmod +x /app/run.sh
 
+# Fundamental crear la carpeta data para que HA pueda generar el archivo /data/options.json 
+# Este archivo contiene las opciones configuradas por el usuario y será leído en main.py
 WORKDIR /data
 
 # Comando de arranque
